# pyconsole

./: .gitignore  CHANGELOG.md  CLAUDE.md  PUBLISHING.md  README.md  app.py  app_bootstrap.py  build.bat  build.sh  build_advanced.py  build_console.bat  build_dir.bat  build_exe.py  build_simple.py  main.py  pyconsole-console.spec  pyconsole-dir.spec  pyconsole-portable-0.1.0.exe.spec  pyconsole-portable.spec  pyconsole.spec  pyconsole_console.spec  pyproject.toml  requirements.txt  test_deployment.py
.github/workflows/: pr-check.yml  publish.yml
