[project]
name = "pyconsole-portable"
version = "0.1.0"
description = "Self-contained Python app with urllib3 HTTP requests"
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "urllib3>=2.0.0"
]
authors = [
    {name = "PyConsole Team", email = "team@pyconsole.dev"}
]
keywords = ["python", "packaging", "deployment", "portable"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
license = {text = "MIT"}
[tool.setuptools]
py-modules = ["app"]

[project.urls]
Homepage = "https://github.com/karlorz/pyconsole"
Repository = "https://github.com/karlorz/pyconsole"
Documentation = "https://github.com/karlorz/pyconsole#readme"
Issues = "https://github.com/karlorz/pyconsole/issues"

[tool.uv]
dev-dependencies = [
    "pyinstaller>=6.0.0",
    "python-semantic-release>=9.0.0",
    "ruff>=0.5.0",
    "build>=1.0.0"
]

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
version_source = "tag"
version_pattern = "v(?P<major>\\d+)\\.(?P<minor>\\d+)\\.(?P<patch>\\d+)"
major_on_zero = false
build_command = "uv run pip install --upgrade build && uv run python -m build"
dist_path = "dist/"
upload_to_vcs_release = true
upload_to_repository = false
remove_dist = false
commit_version_number = true
commit_message = "chore(release): {version}\n\nAutomatically generated by python-semantic-release"
tag_format = "v{version}"

[tool.semantic_release.branches.main]
match = "main"
prerelease = false

[tool.semantic_release.changelog]
exclude_commit_patterns = []

[tool.semantic_release.commit_parser_options]
allowed_tags = ["build", "chore", "ci", "docs", "feat", "fix", "perf", "style", "refactor", "test"]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]

[tool.semantic_release.remote.token]
env = "GH_TOKEN"